# wxFFmpeg

./: .gitignore  CMakeLists.txt  common.cmake
include/: wxFFmpegView.h
mediaplayer/: CMakeLists.txt  OGLMediaBackend.cpp  OGLMediaBackend.h  mediaplayer.cpp  wzMediaCtrl.cpp  wzMediaCtrl.h
src/: CMakeLists.txt  audio.cc  glmanager.cc  glmanager.h  movie.cc  movie.h  packet_queue.h  video.cc  video.h  wxFFmpegView.cc
